--- a/doc/tutorial/enhanced.tex
+++ b/doc/tutorial/enhanced.tex
@@ -58,7 +58,7 @@ This is also represented by the resolution matrix, where $\rho_1$, $\rho_3$ and 
 
 One can easily test the inversion only based on $\rho^a$ or $\phi$ by increasing the errors of the others by a large factor.
 According to (\ref{eq:phid}) the corresponding weight goes to zero.
-By skipping $\phi$ the model deviates slightly and the cell resolutions for $\rho_2$ and $d_2$ decrease to 0.9 and 0.86, respectively. If the $\rho^a$ are neglected the solution becomes obviously non-unique. Only $d_1$ is determined pretty well, the other parameters obtain cell resolutions of 0.6-0.8. Note also that for local regularisation the resolution does not contain the resolution of the preceding models \citep{friedel03}.
+By skipping $\phi$ the model deviates slightly and the cell resolutions for $\rho_2$ and $d_2$ decrease to 0.9 and 0.86, respectively. If the $\rho^a$ are neglected the solution becomes obviously non-unique. Only $d_1$ is determined pretty well, the other parameters obtain cell resolutions of 0.6-0.8. Note also that for local regularization the resolution does not contain the resolution of the preceding models \citep{friedel03}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Combining different parameter types - offsets in travel time}\label{sec:ttoffset}
