--- a/doc/tutorial/gimli-tutorial.tex
+++ b/doc/tutorial/gimli-tutorial.tex
@@ -43,7 +43,7 @@ The inversion can apply various minimisation and regularization schemes, differe
 
 In this tutorial we like to show the programmer how to work with GIMLi by means of different examples.
 A simple curve-fitting is used to show how different forward operators can be incorporated.
-Some small 1d examples demonstrate the use of different parameterisation and the partitioning of data and model.
+Some small 1d examples demonstrate the use of different parameterization and the partitioning of data and model.
 The region technique can be used for different target parameters or geological units.
 
 Joining different inversion runs is one of the key issues of ongoing research.
