Update gimli uses

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 
 @Article{CostabelGue2014VZJ,
-  author    = {Stephan Costabel and Thomas G{\"u}nther},
+  author    = {S. Costabel and T. G{\"u}nther},
   title     = {{N}oninvasive {E}stimation of {W}ater {R}etention {P}arameters by {O}bserving the {C}apillary {F}ringe with {M}agnetic {R}esonance {S}ounding},
   journal   = {Vadose Zone Journal},
   year      = {2014},
@@ -11,16 +11,6 @@
   doi       = {10.2136/vzj2013.09.0163},
   timestamp = {2014.06.06},
   url       = {https://dl.sciencesocieties.org/publications/vzj/abstracts/0/0/},
-}
-
-@InProceedings{Guenther2013NSG,
-  Title                    = {{O}n {I}nversion of {F}requency {D}omain {E}lectromagnetic {D}ata in {S}alt {W}ater {P}roblems - {S}ensitivity and {R}esolution},
-  Author                   = {Thomas G{\"u}nther},
-  Booktitle                = {Ext. Abstr., 19th European Meeting of Environmental and Engineering Geophysics, Bochum, Germany},
-  Year                     = {2013},
-
-  Doi                      = {10.3997/2214-4609.20131387},
-  Timestamp                = {2013.09.17}
 }
 
 @Article{GuentherMue2012HESS,
@@ -37,7 +27,7 @@
 }
 
 @Article{LoewerIgeWag2016,
-  author    = {Markus Loewer and Jan Igel and Norman Wagner},
+  author    = {M. Loewer and J. Igel and N. Wagner},
   title     = {{S}pectral {D}ecomposition of {S}oil {E}lectrical and {D}ielectric {L}osses and {P}rediction of {I}n {S}itu {GPR} {P}erformance},
   journal   = {{IEEE} J. Sel. Top. Appl. Earth Observations Remote Sensing},
   year      = {2016},
@@ -82,18 +72,8 @@
   timestamp = {2010.08.09},
 }
 
-@PhdThesis{rueckerdiss,
-  author    = {C. R{\"u}cker},
-  title     = {{A}dvanced {E}lectrical {R}esistivity {M}odelling and {I}nversion using {U}nstructured {D}iscretization},
-  school    = {University of Leipzig},
-  note      = {http://nbn-resolving.de/urn:nbn:de:bsz:15-qucosa-69066},
-  year      = {2011},
-  owner     = {Guenther.T},
-  timestamp = {2010.09.17},
-}
-
 @Article{CostabelGueDluMue2016,
-  author    = {Stephan Costabel and Thomas Günther and Raphael Dlugosch and Mike Müller-Petke},
+  author    = {S. Costabel and T. Günther and R. Dlugosch and M. Müller-Petke},
   title     = {{T}orus-nuclear magnetic resonance: {Q}uasicontinuous airborne magnetic resonance profiling by using a helium-filled balloon},
   journal   = {GEOPHYSICS},
   year      = {2016},
@@ -135,7 +115,7 @@
 }
 
 @InProceedings{GuentherDluHolYar2010SAGEEP,
-  author    = {Thomas Günther and Raphael Dlugosch and Raphael Holland and Ugur Yaramanci},
+  author    = {T. Günther and R. Dlugosch and R. Holland and U. Yaramanci},
   title     = {{A}quifer characterization using coupled inversion of {MRS} \& {DC}/{IP} data on a hydrogeophysical test-site},
   booktitle = {Ext. Abstract, 23. EEGS annual meeting (SAGEEP), April 11-14, 2010; Keystone, CO.},
   year      = {2010},
@@ -148,7 +128,7 @@
 }
 
 @Article{guenther2016JoAG,
-  author    = {Thomas G{\"u}nther and Tina Martin},
+  author    = {T. G{\"u}nther and T. Martin},
   title     = {{S}pectral two-dimensional inversion of frequency-domain induced polarisation data from a mining slag heap},
   journal   = {Journal of Applied Geophysics},
   year      = {2016},
@@ -161,7 +141,7 @@
 }
 
 @Article{Hupfer2016,
-  author    = {Sarah Hupfer and Tina Martin and Andreas Weller and Thomas G\"{u}nther and Kerstin Kuhn and Victorien Djotsa Nguimeya Ngninjio and Ursula Noell},
+  author    = {S. Hupfer and T. Martin and A. Weller and T. G\"{u}nther and K. Kuhn and V. Djotsa Nguimeya Ngninjio and U. Noell},
   title     = {{P}olarization effects of unconsolidated sulphide-sand-mixtures},
   journal   = {Journal of Applied Geophysics},
   year      = {2016},
@@ -172,15 +152,6 @@
   owner     = {Dlugosch.R},
   publisher = {Elsevier {BV}},
   timestamp = {2016.12.16},
-}
-
-@InProceedings{GuentherMarRue2016IPWS,
-  author    = {Günther, T. and Martin, T. and Rücker, C.},
-  title     = {{S}pectral {I}nversion of {SIP} field data using py{GIML}i/{BERT}},
-  booktitle = {Ext. Abstr., 4th International Workshop on Induced Polarization, Aarhus, Denmark},
-  year      = {2016},
-  owner     = {TG},
-  timestamp = {2016.06.28},
 }
 
 @Article{loewer2017GJI,
@@ -200,7 +171,7 @@
 }
 
 @Article{ronczka2017SE,
-  author    = {Mathias Ronczka and Kristofer Hellman and Thomas G\"{u}nther and Roger Wis{\'{e}}n and Torleif Dahlin},
+  author    = {M. Ronczka and K. Hellman and T. G\"{u}nther and R. Wis{\'{e}}n and T. Dahlin},
   title     = {Electric resistivity and seismic refraction tomography: a challenging joint underwater survey at \"{A}sp\"{o} Hard Rock Laboratory},
   journal   = {Solid Earth},
   year      = {2017},
@@ -216,7 +187,7 @@
 }
 
 @Article{hellman2017JoAG,
-  author    = {Kristofer Hellman and Mathias Ronczka and Thomas G\"{u}nther and Marcus Wennermark and Carsten R\"{u}cker and Torleif Dahlin},
+  author    = {K. Hellman and M. Ronczka and T. G\"{u}nther and M. Wennermark and C. R\"{u}cker and T. Dahlin},
   title     = {Structurally coupled inversion of {ERT} and refraction seismic data combined with cluster-based model integration},
   journal   = {Journal of Applied Geophysics},
   year      = {2017},
@@ -230,13 +201,246 @@
   url       = {https://doi.org/10.1016/j.jappgeo.2017.06.008},
 }
 
-@Article{RueckerGueWag2017GaG,
-  author    = {Carsten Rücker and Thomas Günther and Florian Wagner},
-  title     = {{pyGIMLi}: An open-source library for modelling and inversion in geophysics},
-  journal   = {Computers \& Geosciences},
+@Article{Bergmann2017,
+  author    = {Bergmann, P. and Schmidt-Hattenberger, C. and Labitzke, T. and Wagner, F.M. and Just, A. and Flechsig, C. and Rippe, D.},
+  title     = {Fluid injection monitoring using electrical resistivity tomography - five years of CO2 injection at Ketzin, Germany},
+  journal   = {Geophysical Prospecting},
   year      = {2017},
-  owner     = {Dlugosch.R},
-  timestamp = {2017.07.27},
+  volume    = {65},
+  pages     = {859-875},
+  issn      = {1365-2478},
+  abstract  = {Between the years 2008 and 2013, approximately 67 kilotons of CO2 have been injected at the Ketzin site, Germany. As part of the geophysical monitoring programme, time-lapse electrical resistivity tomography has been applied using crosshole and surface-downhole measurements of electrical resistivity tomography. The data collection of electrical resistivity tomography is partly based on electrodes that are permanently installed in three wells at the site (one injection well and two observation wells). Both types of ERT measurements consistently show the build-up of a CO2-related resistivity signature near the injection point. Based on the imaged resistivity changes and a petrophysical model, CO2 saturation levels are estimated. These CO2 saturations are interpreted in conjunction with CO2 saturations inferred from neutron-gamma loggings. Apart from the CO2–brine substitution response in the observed resistivity changes, significant imprints from the dynamic behaviour of the CO2 in the reservoir are observed.},
+  doi       = {10.1111/1365-2478.12426},
+  owner     = {wagner},
+  publisher = {Wiley Online Library},
+  timestamp = {2016.08.24},
+}
+
+@Article{Wagner2018,
+  author    = {Wagner, F. M. and Wiese, B.},
+  title     = {Fully coupled inversion on a multi-physical reservoir model - Part II: The Ketzin CO2 storage reservoir},
+  journal   = {International Journal of Greenhouse Gas Control},
+  year      = {2018},
+  volume    = {75},
+  pages     = {273-281},
+  doi       = {10.1016/j.ijggc.2018.04.009},
+  owner     = {fwagner},
+  timestamp = {2018.02.18},
+  url       = {https://authors.elsevier.com/c/1XN7o6E2M2gCpK},
+}
+
+@Article{Wiese2018,
+  author    = {Wiese, B. and Wagner, F. and Norden, B. and Maurer, H. and Schmidt-Hattenberger, C.},
+  title     = {Fully coupled inversion on a multi-physical reservoir model - Part I: Theory and concept},
+  journal   = {International Journal of Greenhouse Gas Control},
+  year      = {2018},
+  volume    = {75},
+  pages     = {262-272},
+  doi       = {10.1016/j.ijggc.2018.05.013},
+  owner     = {fwagner},
+  timestamp = {2018.02.18},
+  url       = {https://authors.elsevier.com/c/1XN7o6E2M2gCam},
+}
+
+@Article{Steiner2019,
+  author  = {Steiner, M. and Wagner, F. M. and Flores Orozco, A.},
+  title   = {Improved characterization of alpine permafrost through structurally constrained inversion of refraction seismic data},
+  journal = {The Cryosphere Discussions},
+  year    = {2019},
+  pages   = {1--27},
+  doi     = {10.5194/tc-2019-52},
+  url     = {https://www.the-cryosphere-discuss.net/tc-2019-52/tc-2019-52.pdf},
+}
+
+@Article{Wagner2019,
+  author  = {Wagner, F. and Mollaret, C. and G\"{u}nther, T. and Kemna, A. and Hauck, C.},
+  title   = {Quantitative imaging of water, ice, and air in permafrost systems through petrophysical joint inversion of seismic refraction and electrical resistivity data},
+  journal = {Geophysical Journal International},
+  year    = {2019},
+  volume  = {219},
+  number  = {3},
+  pages   = {1866–1875},
+  doi     = {10.1093/gji/ggz402},
+  url     = {./paper/GJI2019.pdf},
+}
+
+@Article{watlet2018imaging,
+  author    = {Watlet, Arnaud and Kaufmann, Olivier and Triantafyllou, Antoine and Poulain, Ama{\"e}l and Chambers, Jonathan E and Meldrum, Philip I and Wilkinson, Paul B and Hallet, Vincent and Quinif, Yves and Van Ruymbeke, Michel and others},
+  title     = {Imaging groundwater infiltration dynamics in the karst vadose zone with long-term ERT monitoring},
+  journal   = {Hydrology and Earth System Sciences},
+  year      = {2018},
+  volume    = {22},
+  number    = {2},
+  pages     = {1563--1592},
+  publisher = {European Geosciences Union},
+}
+
+@Article{rochlitz2019custem,
+  author    = {Rochlitz, Raphael and Skibbe, Nico and G{\"u}nther, Thomas},
+  title     = {custEM: Customizable finite-element simulation of complex controlled-source electromagnetic data},
+  journal   = {Geophysics},
+  year      = {2019},
+  volume    = {84},
+  number    = {2},
+  pages     = {F17--F33},
+  publisher = {Society of Exploration Geophysicists},
+}
+
+@Article{jordi2018geostatistical,
+  author    = {Jordi, C and Doetsch, J and G{\"u}nther, T and Schmelzbach, C and Robertsson, J OA},
+  title     = {Geostatistical regularization operators for geophysical inverse problems on irregular meshes},
+  journal   = {Geophysical Journal International},
+  year      = {2018},
+  volume    = {213},
+  number    = {2},
+  pages     = {1374--1386},
+  publisher = {Oxford University Press},
+}
+
+@Article{rossi2018data,
+  author    = {Rossi, Matteo and Dahlin, Tbrleif and Olsson, Per-Ivar and G{\"u}nther, Thomas},
+  title     = {Data acquisition, processing and filtering for reliable 3D resistivity and time-domain induced polarisation tomography in an urban area: field example of Vinsta, Stockholm},
+  journal   = {Near Surface Geophysics},
+  year      = {2018},
+  volume    = {16},
+  number    = {3},
+  pages     = {220--229},
+  publisher = {European Association of Geoscientists \& Engineers},
+}
+
+@Article{ronczka2018geophysical,
+  author    = {Ronczka, Mathias and Wis{\'e}n, Roger and Dahlin, Tbrleif},
+  title     = {Geophysical pre-investigation for a Stockholm tunnel project: joint inversion and interpretation of geoelectric and seismic refraction data in an urban environment},
+  journal   = {Near Surface Geophysics},
+  year      = {2018},
+  volume    = {16},
+  number    = {3},
+  pages     = {258--268},
+  publisher = {European Association of Geoscientists \& Engineers},
+}
+
+@Article{skibbe2018structurally,
+  author    = {Skibbe, Nico and G{\"u}nther, Thomas and M{\"u}ller-Petke, Mike},
+  title     = {Structurally coupled cooperative inversion of magnetic resonance with resistivity soundings},
+  journal   = {Geophysics},
+  year      = {2018},
+  volume    = {83},
+  number    = {6},
+  pages     = {JM51--JM63},
+  publisher = {Society of Exploration Geophysicists and American Association of Petroleum~…},
+}
+
+@Article{wunderlich2018constraining,
+  author    = {Wunderlich, Tina and Fischer, Peter and Wilken, Dennis and Hadler, Hanna and Erkul, Ercan and Mecking, Rebekka and G{\"u}nther, Thomas and Heinzelmann, Michael and V{\"o}tt, Andreas and Rabbel, Wolfgang},
+  title     = {Constraining electric resistivity tomography by direct push electric conductivity logs and vibracores: An exemplary study of the Fiume Morto silted riverbed (Ostia Antica, western Italy)},
+  journal   = {Geophysics},
+  year      = {2018},
+  volume    = {83},
+  number    = {3},
+  pages     = {B87--B103},
+  publisher = {Society of Exploration Geophysicists},
+}
+
+@Article{borner2017effect,
+  author    = {B{\"o}rner, Frank and M{\"u}llerHuber, Edith and Branka, Daniel and R{\"u}cker, Carsten},
+  title     = {The effect of compaction on complex electrical resistivity of shaly sands},
+  journal   = {Near Surface Geophysics},
+  year      = {2017},
+  volume    = {15},
+  number    = {6},
+  pages     = {633--643},
+  publisher = {European Association of Geoscientists \& Engineers},
+}
+
+@Article{ochs2020considerations,
+  author    = {Ochs, Johanna and Klitzsch, Norbert},
+  title     = {Considerations regarding small-scale surface and borehole-to-surface electrical resistivity tomography},
+  journal   = {Journal of Applied Geophysics},
+  year      = {2020},
+  volume    = {172},
+  pages     = {103862},
+  publisher = {Elsevier},
+}
+
+@Article{skibbe2020comet,
+  author    = {Skibbe, Nico and Rochlitz, Raphael and G{\"u}nther, Thomas and M{\"u}ller-Petke, Mike},
+  title     = {COMET: An open-source toolbox for Surface NMR},
+  journal   = {Geophysics},
+  year      = {2020},
+  volume    = {85},
+  number    = {3},
+  pages     = {1--56},
+  publisher = {Society of Exploration Geophysicists},
+}
+
+@Article{jordi2020structural,
+  author    = {Jordi, Claudio and Doetsch, Joseph and G{\"u}nther, T and Schmelzbach, C{\'e}dric and Maurer, Hansruedi and Robertsson, Johan OA},
+  title     = {Structural joint inversion on irregular meshes},
+  journal   = {Geophysical Journal International},
+  year      = {2020},
+  volume    = {220},
+  number    = {3},
+  pages     = {1995--2008},
+  publisher = {Oxford University Press},
+}
+
+@Article{de2019joint,
+  author    = {de Pasquale, Giulia and Linde, N and Greenwood, A},
+  title     = {Joint probabilistic inversion of DC resistivity and seismic refraction data applied to bedrock/regolith interface delineation},
+  journal   = {Journal of Applied Geophysics},
+  year      = {2019},
+  volume    = {170},
+  pages     = {103839},
+  publisher = {Elsevier},
+}
+
+@Article{whiteley2020landslide,
+  author    = {Whiteley, JS and Chambers, JE and Uhlemann, S and Boyd, J and Cimpoiasu, MO and Holmes, JL and Inauen, CM and Watlet, A and Hawley-Sibbett, LR and Sujitapan, C and others},
+  title     = {Landslide monitoring using seismic refraction tomography--The importance of incorporating topographic variations},
+  journal   = {Engineering Geology},
+  year      = {2020},
+  pages     = {105525},
+  publisher = {Elsevier},
+}
+
+@Article{clement2020frequency,
+  author    = {Cl{\'e}ment, R{\'e}mi and P{\"a}rn, Jaan and Maddison, Martin and Henine, Hocine and Chaumont, C{\'e}dric and Tournebize, Julien and Uri, Veiko and Espenberg, Mikk and G{\"u}nther, Thomas and Mander, {\"U}lo},
+  title     = {Frequency-domain electromagnetic induction for upscaling greenhouse gas fluxes in two hemiboreal drained peatland forests},
+  journal   = {Journal of Applied Geophysics},
+  year      = {2020},
+  pages     = {103944},
+  publisher = {Elsevier},
+}
+
+@Article{nickschick2019large,
+  author    = {Nickschick, Tobias and Flechsig, Christina and Mrlina, Jan and Oppermann, Frank and L{\"o}big, Felix and G{\"u}nther, Thomas},
+  title     = {Large-scale electrical resistivity tomography in the Cheb Basin (Eger Rift) at an International Continental Drilling Program (ICDP) monitoring site to image fluid-related structures},
+  journal   = {Solid Earth},
+  year      = {2019},
+  volume    = {10},
+  number    = {6},
+  pages     = {1951--1969},
+  publisher = {Copernicus GmbH},
+}
+
+@Article{leger2019distributed,
+  author  = {L{\'e}ger, Emmanuel and Dafflon, Baptiste and Robert, Yves},
+  title   = {A distributed temperature profiling method for assessing spatial variability in ground},
+  journal = {The Cryosphere},
+  year    = {2019},
+  volume  = {13},
+  pages   = {11},
+}
+
+@Article{assouline2019machine,
+  author    = {Assouline, Dan and Mohajeri, Nahid and Gudmundsson, Agust and Scartezzini, Jean-Louis},
+  title     = {A machine learning approach for mapping the very shallow theoretical geothermal potential},
+  journal   = {Geothermal Energy},
+  year      = {2019},
+  volume    = {7},
+  number    = {1},
+  pages     = {19},
+  publisher = {Springer},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
