--- a/doc/libgimli.bib
+++ b/doc/libgimli.bib
@@ -1,5 +1,4 @@
-% This file was created with JabRef 2.10.
-% Encoding: UTF8
+% Encoding: UTF-8
 
 
 EAGE workshop on Open-source software in Geosciences, EAGE, Vienna.
@@ -18,3 +17,15 @@ EAGE workshop on Open-source software in Geosciences, EAGE, Vienna.
   Booktitle                = {{75. Jahrestagung der Deutschen Geophysikalischen Gesellschaft (DGG), Hannover 2015}},
   Year                     = {2015}
 }
+
+@PhdThesis{rueckerdiss,
+  author    = {C. R{\"u}cker},
+  title     = {{A}dvanced {E}lectrical {R}esistivity {M}odelling and {I}nversion using {U}nstructured {D}iscretization},
+  school    = {University of Leipzig},
+  year      = {2011},
+  owner     = {Guenther.T},
+  timestamp = {2010.09.17},
+  url       = {https://nbn-resolving.de/urn:nbn:de:bsz:15-qucosa-69066},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
