--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -342,7 +342,7 @@
 }
 
 @Article{borner2017effect,
-  author    = {B{\"o}rner, Frank and M{\"u}llerHuber, Edith and Branka, Daniel and R{\"u}cker, Carsten},
+  author    = {B{\"o}rner, Frank and M{\"u}ller-Huber, Edith and Branka, Daniel and R{\"u}cker, Carsten},
   title     = {The effect of compaction on complex electrical resistivity of shaly sands},
   journal   = {Near Surface Geophysics},
   year      = {2017},
