Add two more references

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -443,4 +443,26 @@
   publisher = {Springer},
 }
 
+@Article{pub.1121196731,
+  author  = {Lopez-Alvis, Jorge and Hermans, Thomas and Nguyen, Frédéric},
+  title   = {A cross-validation framework to extract data features for reducing structural uncertainty in subsurface heterogeneity},
+  journal = {Advances in Water Resources},
+  year    = {2019},
+  volume  = {133},
+  pages   = {103427},
+  doi     = {10.1016/j.advwatres.2019.103427},
+  url     = {https://app.dimensions.ai/details/publication/pub.1121196731},
+}
+
+@Article{hess-2019-408,
+  author  = {Palacios, A. and Ledo, J. J. and Linde, N. and Luquot, L. and Bellmunt, F. and Folch, A. and Marcuello, A. and Queralt, P. and Pezard, P. A. and Mart\'{\i}nez, L. and Bosch, D. and Carrera, J.},
+  title   = {Time-lapse cross-hole electrical resistivity tomography (CHERT) for monitoring seawater intrusion dynamics in a Mediterranean aquifer},
+  journal = {Hydrology and Earth System Sciences Discussions},
+  year    = {2019},
+  volume  = {2019},
+  pages   = {1--30},
+  doi     = {10.5194/hess-2019-408},
+  url     = {https://www.hydrol-earth-syst-sci-discuss.net/hess-2019-408/},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
