--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -342,7 +342,7 @@
 }
 
 @Article{borner2017effect,
-  author    = {B{\"o}rner, Frank and M{\"u}ller-Huber, Edith and Branka, Daniel and R{\"u}cker, Carsten},
+  author    = {B{\"o}rner, Frank and M{\"u}llerHuber, Edith and Branka, Daniel and R{\"u}cker, Carsten},
   title     = {The effect of compaction on complex electrical resistivity of shaly sands},
   journal   = {Near Surface Geophysics},
   year      = {2017},
@@ -463,6 +463,16 @@
   pages   = {1--30},
   doi     = {10.5194/hess-2019-408},
   url     = {https://www.hydrol-earth-syst-sci-discuss.net/hess-2019-408/},
+}
+
+@Article{Klingler2020,
+  author  = {Stefan Klingler and Carsten Leven and Olaf A. Cirpka and Peter Dietrich},
+  title   = {Anomaly effect-driven optimization of direct-current geoelectric mapping surveys in large areas},
+  journal = {Journal of Applied Geophysics},
+  year    = {2020},
+  volume  = {176},
+  pages   = {104002},
+  doi     = {10.1016/j.jappgeo.2020.104002},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
