Add Skibbe et al. (2020) to usecases and carousel

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -362,15 +362,15 @@
   publisher = {Elsevier},
 }
 
-@Article{skibbe2020comet,
-  author    = {Skibbe, Nico and Rochlitz, Raphael and G{\"u}nther, Thomas and M{\"u}ller-Petke, Mike},
-  title     = {COMET: An open-source toolbox for Surface NMR},
-  journal   = {Geophysics},
-  year      = {2020},
-  volume    = {85},
-  number    = {3},
-  pages     = {1--56},
-  publisher = {Society of Exploration Geophysicists},
+@Article{skibbe2020,
+  author  = {Skibbe, Nico and Rochlitz, Raphael and G{\"u}nther, Thomas and M{\"u}ller-Petke, Mike},
+  title   = {COMET: An open-source toolbox for Surface NMR},
+  journal = {Geophysics},
+  year    = {2020},
+  volume  = {85},
+  number  = {3},
+  pages   = {1--56},
+  doi     = {10.1190/geo2019-0484.1},
 }
 
 @Article{jordi2020structural,
