Add Jordi et al. (2020) to paper carousel

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -381,6 +381,7 @@
   volume    = {220},
   number    = {3},
   pages     = {1995--2008},
+  doi       = {10.1093/gji/ggz550},
   publisher = {Oxford University Press},
 }
 
