Add Fediuk et al. (2020) to gimli uses

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -475,4 +475,16 @@
   doi     = {10.1016/j.jappgeo.2020.104002},
 }
 
+@Article{Fediuk2020,
+  author         = {Fediuk, Annika and Wilken, Dennis and Wunderlich, Tina and Rabbel, Wolfgang},
+  title          = {Physical Parameters and Contrasts of Wooden Objects in Lacustrine Environment: Ground Penetrating Radar and Geoelectrics},
+  journal        = {Geosciences},
+  year           = {2020},
+  volume         = {10},
+  number         = {4},
+  issn           = {2076-3263},
+  article-number = {146},
+  doi            = {10.3390/geosciences10040146},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
