Add Peruzzo et al. (2020) to carousel and gimli uses

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -487,4 +487,12 @@
   doi            = {10.3390/geosciences10040146},
 }
 
+@Article{Peruzzo2020,
+  author  = {Luca Peruzzo and Chunwei Chou and Yuxin Wu and Myriam Schmutz and Benjamin Mary and Florian M. Wagner and Petr Petrov and Gregory Newman and Elison B. Blancaflor and Xiuwei Liu and Xuefeng Ma and Susan Hubbard},
+  title   = {Imaging of plant current pathways for non-invasive root Phenotyping using a newly developed electrical current source density approach},
+  journal = {Plant and Soil},
+  year    = {2020},
+  doi     = {10.1007/s11104-020-04529-w},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
