Add Blazevic et al. (2020)

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -495,4 +495,16 @@
   doi     = {10.1007/s11104-020-04529-w},
 }
 
+@Article{Blazevic2020,
+  author         = {Blazevic, Lara A. and Bodet, Ludovic and Pasquet, Sylvain and Linde, Niklas and Jougnot, Damien and Longuevergne, Laurent},
+  title          = {Time-Lapse Seismic and Electrical Monitoring of the Vadose Zone during A Controlled Infiltration Experiment at the Ploemeur Hydrological Observatory, France},
+  journal        = {Water},
+  year           = {2020},
+  volume         = {12},
+  number         = {5},
+  issn           = {2073-4441},
+  article-number = {1230},
+  doi            = {10.3390/w12051230},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
