add friedrich to authors and reverted accidental commit

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Carsten Rücker: carsten@pygimli.org
 Thomas Günther: thomas@pygimli.org
 Florian Wagner: florian@pygimli.org
+Friedrich Dinsel: friedrich@pygimli.org
